# Interactions-search

./: .gitignore  Interacciones_variables.yml  Interactions_search.py  README.md  pyproject.toml
docs/: AGENTIC_ROADMAP.md  BASELINE.md  DECISIONS.md
src/interactions_search/: __init__.py  config.py  geometry.py
tests/: test_smoke.py
tests/config/: test_config_loading.py
tests/geometry/: test_geometry.py
