[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactions-search"
version = "0.1.0"
description = "Detect and classify non-covalent protein-ligand interactions from PDB files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "biopython",
  "rdkit",
  "pandas",
  "numpy",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]

[tool.setuptools]
py-modules = ["Interactions_search", "Geometry"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
