[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactions-search"
version = "0.1.0"
description = "Detect and classify non-covalent protein-ligand interactions from PDB files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "biopython",
  "rdkit",
  "pandas",
  "numpy",
  "pyyaml",
  "pydantic>=2.7",
  "scipy",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
interactions-search = "interactions_search:main"

[tool.setuptools]
packages = ["interactions_search"]
package-dir = {"" = ".", "interactions_search" = "src/interactions_search"}
py-modules = ["Interactions_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
